--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -14,7 +14,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:alpline
+        image: postgres:alpine
         ports:
           - 5432:5432
         env:
